fix overflowing info on forum page

--- a/src/assets/scss/forum.scss
+++ b/src/assets/scss/forum.scss
@@ -326,11 +326,17 @@
               margin-bottom: 1.2rem;
             }
             ol {
+              // background-color: red;
+              width: 100%;
               li {
                 color: #6f6c90;
                 font-size: 1.407rem;
                 font-weight: 400;
                 line-height: 21.894px;
+                // background-color: green;
+                word-break: break-word;
+                width: 100%;
+                // overflow: hidden;
               }
             }
           }
@@ -397,6 +403,7 @@
               border-radius: 50%;
               object-fit: cover;
               overflow: hidden;
+              cursor: pointer;
             }
             div {
               h5 {
@@ -404,6 +411,7 @@
                 font-size: 17.672px;
                 font-weight: 600;
                 line-height: 100%;
+                cursor: pointer;
               }
               p {
                 color: #807c8b;
